Fixed several dashboard CSS issues. Centered alignment of the Guage selector is now consistant on mobile screens. The Line Chart is now flush with the other visualizations. The Choropleth has been resized to take up an equal space with the other visualizations. The text above the Choropleth has been centered. The Graph displays are now larger once it goes into verticle mode with new height calculations. Fonts in the dashboard have been standardized as Ariel.

--- a/src/components/css/Dashboard.css
+++ b/src/components/css/Dashboard.css
@@ -21,6 +21,8 @@
   width: 100vw;
   height: calc(100vh - 150px);
   overflow: auto !important;
+  font-family: Arial, sans-serif;
+  font-weight: 400;
 }
 
 .dashboardClosed {
@@ -31,9 +33,11 @@
   display: flex;
   align-items: top;
   justify-content: center;
-  width: 100vw;
+  width: max(360px, 100vw);
   height: calc(100vh - 150px);
   overflow: auto !important;
+  font-family: Arial, sans-serif;
+  font-weight: 400;
 }
 
 @media screen and (max-width: 700px) {
@@ -72,7 +76,6 @@
   margin-bottom: 50px;
   border: 1px solid rgb(21, 21, 21);
   border-radius: 5px;
-  font-family: Geneva, sans-serif;
   color: rgb(187, 155, 49) !important;
   line-height: 28px !important;
   justify-content: left;
@@ -158,7 +161,6 @@
 
 .dashboard-guage-grid {
   display: grid;
-  font-family: Geneva, sans-serif;
   color: rgb(218, 218, 218);
   grid-template-columns: auto repeat(6, 1fr);
   column-gap: 4px;
@@ -219,7 +221,6 @@
 
   .dashboard-guage-grid {
     display: grid;
-    font-family: Geneva, sans-serif;
     color: rgb(218, 218, 218);
     grid-template-columns: 1fr;
     row-gap: 4px;
@@ -292,20 +293,19 @@
   position: relative;
   text-align: center;
   margin: 0;
-  height: 85px;
+  height: 15%;
   border-radius: 9px;
   background-color: black;
   align-items: center;
   color: rgb(254, 254, 254);
-  font-size: 16px;
+  font-size: 100%;
   font-weight: 600;
   white-space: pre;
-  font-family: Arial, sans-serif;
 }
 
 @media screen and (max-width: 450px) {
   .selection-divider {
-    left: -22px;
+    left: calc((100% - 360px)/4);
     width: 330px;
   }
 }
@@ -338,13 +338,28 @@
   font-weight: 600;
   color: rgb(187, 155, 49);
   grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 5vw min(50vw, 40vh);
   column-gap: 4px;
-  row-gap: 20px;
   margin: 0;
   margin-top: 1%;
   margin-bottom: 2%;
   justify-items: center;
-  align-items: center;
+}
+
+.graph-grid-small {
+  display: block;
+  box-sizing: border-box;
+  min-width: 0;
+  position: relative;
+  width: 100%;
+  height: min(150vw, 60vh);
+  font-size: max(var(--bs-body-font-size), 2vw);
+  font-weight: 500;
+  color: rgb(187, 155, 49);
+  margin: auto;
+  text-align: center;
+  justify-items: center;
+  padding-left: 0px;
 }
 
 .double-bar-text-wrapper {
@@ -352,6 +367,16 @@
   text-indent: 18%;
   text-align: center;
   color: rgb(218, 218, 218);
+}
+
+.line_container {
+  min-width: 0;
+  position: relative;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(1, 1fr);
+  justify-items: center;
 }
 
 .bar-grid {
@@ -365,11 +390,21 @@
   align-items: center;
 }
 
+.text-centered {
+  text-align: center;
+  align-items: center;
+}
+
 .nivo-wrapper {
   min-width: 0;
   width: 100%;
-  height: 60vh;
-  max-height: 30vw;
+  height: 100%;
+}
+
+.bar-wrapper {
+  min-width: 0;
+  width: 100%;
+  height: min(48vw, 38vh);
 }
 
 .grid-border {
@@ -377,37 +412,49 @@
   border-radius: 30%;
   border-color: rgb(218, 218, 218);
   border-radius: 7px;
+  overflow: hidden;
 }
 
 .map-wrapper {
   position: relative;
-  height: 60vh;
-  width: 30vw;
-  max-height: 30vw;
-}
-
-.graph-grid-small {
-  display: inline-block;
-  box-sizing: border-box;
-  min-width: 0;
-  position: relative;
-  width: 100%;
-  font-size: 2vw;
-  font-weight: 500;
-  color: rgb(187, 155, 49);
-  margin: auto;
-  text-align: center;
-  justify-items: center;
-  align-items: center;
+  height: min(50vw, 40vh);
 }
 
 @media screen and (max-width: 1000px) {
   .map-wrapper {
-    position: relative;
-    height: 60vh;
-    width: 100%;
-    max-height: 30vw;
+    height: min(150vw, 60vh);
   }
+
+  .bar-wrapper {
+    height: min(148vw, 48vh);
+  }
+}
+
+#map {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+
+.image-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.slider {
+  width: 100%;
+  height: 100%;
+}
+
+.slider-container {
+  width: 100%;
+  height: 100%;
 }
 
 .chart,
